--- a/bottle_spa_test3/top.html
+++ b/bottle_spa_test3/top.html
@@ -42,7 +42,7 @@ function addTags(data){
 }
 
 function checkTimes(items){
-    if (items.length >= (setTimes-2)){
+    if (items.length > (setTimes)){
         alert('上限回数を超えました');
         window.location.reload();
         return false;
