DATETIMEの型変換、HTML リロード時メッセージ表示

--- a/bottle_spa_test3/top.html
+++ b/bottle_spa_test3/top.html
@@ -43,7 +43,7 @@ function addTags(data){
 
 function checkTimes(items){
     if (items.length > (setTimes)){
-        alert('上限回数を超えました');
+        alert('上限回数を超えました。リロードされます。');
         window.location.reload();
         return false;
     } else {
