--- a/bottle_spa_test3/top.html
+++ b/bottle_spa_test3/top.html
@@ -6,16 +6,47 @@
 <!--<link rel="stylesheet" type="text/css" href="assets/spa.css">-->
 <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 <script language="javascript" type="text/javascript">
-window.onload = function(){
-// ページ読み込み時に実行したい処理
-    //getUrl();
-}
+
 //グローバル変数
 var items = [];
 //上限回数       
 var setTimes = 5;
 //ランダムIDの範囲
-var ranNoRange = 60;
+var ranNoRange;
+
+window.onload = function(){
+// 今日の日付を取得
+    //ランダム関数の最大レンジの設定
+  $(function(){
+  
+    var targetUrl = 'http://localhost:8080/range'
+    
+    //TODO
+    var request = {
+      'today' : null
+    };
+
+    $.ajax({
+        url: targetUrl,
+        type: 'POST',
+        contentType: 'application/JSON',
+        dataType: 'JSON',
+        data : JSON.stringify(request),
+        scriptCharset: 'utf-8',
+    }).done(function(data){ 
+        /* 通信成功時 */
+        ranNoRange = data.count;
+        console.log(data.count);         
+    }).fail(function(data, XMLHttpRequest, textStatus){
+        /* 通信失敗時 */
+        alert('通信失敗');
+        console.log('通信失敗');
+        console.log(data);
+        console.log("XMLHttpRequest : " + XMLHttpRequest.status);
+        console.log("textStatus     : " + textStatus);
+    });
+});
+}
 //チェック関数
 function checkId(data){
          var id = '';
@@ -57,7 +88,7 @@ function mkRanNo(){
   var ranNo = Math.floor( Math.random() * ranNoRange);
   return ranNo;
   console.log('ranNo');
-  console.log(ranNo);  
+  console.log(ranNo);
 }
 
 function getUrl(){
